--- a/TabibYab/res/menu/main.xml
+++ b/TabibYab/res/menu/main.xml
@@ -1,6 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     
+    
+    <item android:id="@+id/action_home"
+          android:title="@string/home"
+          android:icon="@drawable/home_icon"
+          android:showAsAction="ifRoom"
+    />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
@@ -9,7 +15,7 @@
     <item 
         android:id="@+id/searchFilterButton"
         android:icon="@drawable/filter" 
-        android:title="@string/show_as_list" 
+        android:title="@string/filter" 
         android:enabled="true"
         android:showAsAction="ifRoom"
         android:visible="true"></item>
@@ -38,6 +44,7 @@
           android:icon="@drawable/ic_action_refresh"
           android:showAsAction="ifRoom"
     />
+    
     
     
     
