--- a/TabibYab/res/layout/add_clinic.xml
+++ b/TabibYab/res/layout/add_clinic.xml
@@ -119,6 +119,7 @@
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
             android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
             android:scaleType="fitCenter"
             android:src="@drawable/plus_icon" />
 
@@ -128,8 +129,10 @@
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
             android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
             android:scaleType="fitCenter"
             android:src="@drawable/minus_icon" />
+
     </LinearLayout>
 
     <TextView
@@ -157,7 +160,7 @@
         android:text="@string/select_location" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/text_view_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
@@ -189,6 +192,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
             android:scaleType="fitCenter"
             android:src="@drawable/plus_icon" />
 
@@ -197,6 +201,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
             android:scaleType="fitCenter"
             android:src="@drawable/minus_icon" />
 
