--- a/TabibYab/res/menu/list_view_menu.xml
+++ b/TabibYab/res/menu/list_view_menu.xml
@@ -33,6 +33,14 @@
           android:showAsAction="ifRoom|collapseActionView"
           android:actionViewClass="android.widget.SearchView" />
     
+    <item android:id="@+id/action_sort"
+          android:title="@string/sort"
+          android:icon="@drawable/sort"
+          android:showAsAction="always" 
+          android:visible="true"/>
+    
+    
+    
     <item android:id="@+id/action_refresh_list"
           android:title="@string/action_refresh"
           android:icon="@drawable/ic_action_refresh"
